Coding Assignment - PnS

--- a/Coding Assignment_2021397.ipynb
+++ b/Coding Assignment_2021397.ipynb
@@ -439,7 +439,7 @@
    "source": [
     "> Do you see the sample mean converge to the expected value of the Bernoulli RV? For what smallest value of m has the sample mean more or less converged to the parameter of the Bernoulli RV?\n",
     "\n",
-    "> **Answer:** Yes, it does, for $m \\in [940,1000]$"
+    "> **Answer:** Yes, it does, for m = 940"
    ]
   }
  ],
